<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/cor_padrao"
        android:textSize="@dimen/font_large"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/imagem"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txt_please_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in"
        android:textColor="@color/cor_padrao"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_login"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- colocar ícones nos campos de texto-->
    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:textColorHint="@color/cor_padrao"
        android:textSize="@dimen/font_normal"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/txt_please_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:textColorHint="@color/cor_padrao"
        android:textSize="@dimen/font_normal"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/txt_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_reminde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind"
        android:textColor="@color/cor_padrao"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/switch_remind"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

    <!-- verificar tamanho-->
    <Switch
        android:id="@+id/switch_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/cor_padrao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_reminde"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cor_padrao"
        android:text="@string/sign_in"
        android:textSize="@dimen/font_normal"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/cor_padrao"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/cor_padrao"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintStart_toEndOf="@id/account"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>